[project]
name = ""
version = ""
description = ""
authors = [
    {name = "ponbac", email = "root@ponbac.xyz"},
]
dependencies = [
    "fastapi>=0.85.1",
    "uvicorn[standard]>=0.19.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.5",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[tool.pdm.scripts]
start = "uvicorn src.main:app --port 44344 --reload"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
